docs(bintrees): the header is the whole 2x, and the compact path is inert
Two corrections to the object-size section, both of which change what the
next attempt should do.

First, the body is ALREADY compact on the live path: `class_layout` packs
reference fields at 8 bytes each, which is why `emit_inline_tlab_new` emits
`lea rax,[r11+30h]` (48 = 32 + 16) rather than 32 + 2*SLOT_SIZE = 64. The page
had attributed the 2x to the pair; it is the header alone, all 24 bytes of it
against HotSpot's 24-byte Node.

Second — and this is the one I got wrong twice — the 8-byte `CompactHeader`
cannot simply be switched on. `CompactAllocator` is instantiated only in two
`#[test]` functions and allocates from its own Vec<u8>; `use_compact_headers`
has a single non-test reader that appends a FLAG STRING and selects no
allocator; `VmHeap::get_compact_header` documents itself as correct only once
some backend writes compact headers, and none does. There is no switch, and
"default it on" was not a real plan.

Records the bounded first step instead: `forwarding_ptr` is 8 of the 32 bytes
and is redundant with the mark word, which already encodes relocation as
MARK_FORWARDED = 0b11 with the target in the upper 62 bits and has
forwarded_mark/decode_forwarded/is_forwarded implemented. Folding the field
into the mark word is 32 -> 24 and Node 48 -> 40 with no new encoding to
invent.

Also notes, for the record, that HEADER_SIZE has never been 16: 32 at the
open-source commit, 40 when mark_word was appended, back to 32 in d46e70521
(2026-07-24) — the same commit that added CompactHeader as a separate,
default-off, unwired type.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>